--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,5 @@
-play.crypto.secret = "changeme"
+play.crypto.secret = "kestrodayMizoRight"
 play.i18n.langs = ["ru", "en"]
 
 include "database.conf"
+include "email.conf"
